[gd_scene load_steps=7 format=3 uid="uid://ckupthbg5ysjo"]

[ext_resource type="Texture2D" uid="uid://cbs01r6raciag" path="res://assets/Items/springboardDown.png" id="1_6vrsj"]
[ext_resource type="Script" uid="uid://dokh586x78gh4" path="res://scripts/spring.gd" id="1_f6w1c"]
[ext_resource type="Texture2D" uid="uid://rely8r3om344" path="res://assets/Items/springboardUp.png" id="2_f6w1c"]

[sub_resource type="SpriteFrames" id="SpriteFrames_iudvb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_6vrsj")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_f6w1c")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6vrsj"]
size = Vector2(36, 70)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f6w1c"]
size = Vector2(58, 4)

[node name="Spring" type="Node2D"]
script = ExtResource("1_f6w1c")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, 0)
sprite_frames = SubResource("SpriteFrames_iudvb")
animation = &"down"

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, -19)

[node name="Base" type="Area2D" parent="."]

[node name="BaseArea" type="CollisionShape2D" parent="Base"]
position = Vector2(2, 17)
rotation = 1.5708
shape = SubResource("RectangleShape2D_6vrsj")

[node name="LoadingArea" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="LoadingArea" type="CollisionShape2D" parent="LoadingArea"]
position = Vector2(1, -3)
shape = SubResource("RectangleShape2D_f6w1c")

[node name="LaunchTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HoldLocation" type="Marker2D" parent="."]
position = Vector2(0, -6)

[connection signal="body_entered" from="LoadingArea" to="." method="_on_loading_area_body_entered"]
[connection signal="body_exited" from="LoadingArea" to="." method="_on_loading_area_body_exited"]
[connection signal="timeout" from="LaunchTimer" to="." method="_on_launch_timer_timeout"]
